# Passkey_auth

./: .env  Cargo.toml
migrations/: 20250102102501_schema.sql  20250102115539_login.sql
src/: main.rs
src/api/: auth.rs  mod.rs  pages.rs  routes.rs
src/config/: database.rs  mod.rs  tracing.rs  web_authn.rs
src/models/: auth.rs  mod.rs  model.rs  templates.rs  user.rs
templates/: base.html  login.html  register.html  welcome.html
