[package]
name = "passkey_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
] }
base64 = "0.22.1"

dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }

tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

askama = { version = "0.12.1", features = ["with-axum"] }
axum = { version = "0.8.1", features = ["macros"] }
askama_axum = "0.4.0"

reqwest = "0.12.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "uuid",
] }
